# api/handler/session.go
@@ -88,7 +88,7 @@ func (h *ChatSessionHandler) createChatSessionByUUID(r *http.Request, req create
 		SessionUUID: req.UUID, UserID: userID, Topic: req.Topic,
 		MaxLength: dto.DefaultMaxLength, Temperature: dto.DefaultTemperature,
 		Model: req.Model, MaxTokens: dto.DefaultMaxTokens, TopP: dto.DefaultTopP, N: dto.DefaultN,
-		Debug: false, SummarizeMode: false, ExploreMode: false, ArtifactEnabled: false,
+		SummarizeMode: false, ExploreMode: false, ArtifactEnabled: false,
 		EnsureSystemPrompt: true, DefaultSystemPrompt: req.DefaultSystemPrompt, ActivateGlobally: true,
 	})
 	if err != nil {
@@ -116,7 +116,7 @@ func (h *ChatSessionHandler) createOrUpdateChatSessionByUUID(r *http.Request, se
 		SessionUUID: sessionReq.Uuid, UserID: userID, Topic: sessionReq.Topic,
 		MaxLength: sessionReq.MaxLength, Temperature: sessionReq.Temperature,
 		Model: sessionReq.Model, TopP: sessionReq.TopP, N: sessionReq.N,
-		MaxTokens: sessionReq.MaxTokens, Debug: sessionReq.Debug,
+		MaxTokens:     sessionReq.MaxTokens,
 		SummarizeMode: sessionReq.SummarizeMode, ArtifactEnabled: sessionReq.ArtifactEnabled,
 		ExploreMode: sessionReq.ExploreMode, WorkspaceUUID: sessionReq.WorkspaceUUID,
 	}
@@ -156,7 +156,7 @@ func (h *ChatSessionHandler) getSimpleChatSessionsByUserID(r *http.Request, _ ap
 			Uuid: session.UUID, IsEdit: false, Title: session.Title,
 			MaxLength: session.MaxLength, Temperature: session.Temperature,
 			TopP: session.TopP, N: session.N, MaxTokens: session.MaxTokens,
-			Debug: session.Debug, Model: session.Model,
+			Model:         session.Model,
 			SummarizeMode: session.SummarizeMode, ArtifactEnabled: session.ArtifactEnabled,
 			WorkspaceUuid: session.WorkspaceUUID,
 		})
